# Cmake-Project-Template

./: CMakeLists.txt  README.md
include/: library.h
src/: CMakeLists.txt  main.cpp
